# picar-rs

./: Cargo.toml  LICENSE  README.md  build.rs  justfile
src/: cli.rs  main.rs  opt.rs  rename.rs
