[package]
name = "picar-rs"
version = "0.3.1"
edition = "2021"
rust-version = "1.59"

[profile.release]
panic = 'abort'
codegen-units = 1
# opt-level = 'z'
lto = true
strip = true

[dependencies]
anyhow = "1"
futures = "0.3"
gflags = "0.3"
kamadak-exif = "0.5"
once_cell = "1"
time = { version = "0.3", features = ["std", "parsing", "formatting"] }
tokio = { version = "1", features = ["rt", "macros", "fs"] }
