[package]
name = "picar-rs"
version = "0.3.2"
edition = "2021"
rust-version = "1.59"

[profile.release]
panic = 'abort'
lto = true
strip = true

[dependencies]
anyhow = "1"
once_cell = "1"
time = { version = "0.3", features = ["std", "parsing", "formatting"] }
clap = { version = "3", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = "0.3"

kamadak-exif = "0.5"
